[posts-logic] added post CRUD and followers, a bit raw for now
